# next-step-flutter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pubspec.yaml  setup.ps1  setup.sh
.dart_tool/: package_config.json  package_config_subset
.idx/: dev.nix
Next Step AI/: .gitignore  requirements.txt
Sequence Diagrams/: sequence.puml
UMLdiagram/: ERdiagram.puml  classdiagram.puml  usecase.drawio  usecase.puml
Use Case Diagrams/: usecase.drawio
android/: build.gradle
assets/: tf_model.keras
docs/: README.md  api.md  data-model.md  development.md  education-schema.md  how-to-ui-backend-in-flutter.md  overview.md  roadmap.md
lib/: addEducation.dart  change_password.dart  courses.dart  education.dart  explore.dart  goverment_uni.dart  home.dart  interest.dart  language_selection_screen.dart  lets_get_started.dart  main.dart  nav_bar.dart  notifications.dart  private_uni.dart  profile.dart  recommendation.dart  recommendation_on_interest.dart  set_change_password.dart  set_language_selection.dart  settings_Ui.dart  sign_up.dart  two_factor.dart  two_factor_email.dart  two_factor_mobile.dart
next-step-ai/: .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh
next-step-ai/src/api/: SyncController.java
next-step-ai/src/data/: preprocessor.py
next-step-ai/src/data/generators/: __init__.py  config.py  dataset_generator.py
next-step-ai/src/models/: train.py
next-step-ai/src/service/: SyncService.java
next-step-ai/tests/: test_data_pipeline.py
next_step/: pubspec.yaml
(+102 files in other folders)
